Concurrent request handling